--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "github:shadcn/ui",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^3.4.6",
