--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.4.4",
     "recharts": "^2.15.1",
     "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4"
